# libsevenzip

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  EXTRACTION_IMPLEMENTATION_REPORT.md  LICENSE  README.md  README.zh-CN.md  SOLUTION_REPORT.md  debug_with_windbg.txt  extract_callback.i  test_results.json
.github/workflows/: build-ffi.yml
Document/: API_Reference.md  API_Reference.zh-CN.md
cmake/: SevenZipConfig.cmake.in  sevenzip.pc.in
examples/: CMakeLists.txt  convenience_demo.cpp  example_basic_usage.c
examples/cmake_usage/: CMakeLists.txt  README.md  main.cpp
examples/python/: example_usage.py  sevenzip.py  sevenzip_ffi.py
include/sevenzip/: archive.hpp  archive_reader.hpp  archive_writer.hpp  compression.hpp  compressor.hpp  convenience.hpp  error.hpp  format.hpp  fwd.hpp  sevenzip.hpp  sevenzip_capi.h  sz_archive.h  sz_compress.h  sz_convenience.h  sz_error.h  sz_types.h  sz_version.h  sz_writer.h  types.hpp
src/: CMakeLists.txt
src/api/: CMakeLists.txt  archive.cpp  archive_reader.cpp  archive_writer.cpp  compressor.cpp  convenience.cpp  placeholder.cpp
src/api/modern/: compression.cpp  format.cpp
src/ffi/: CMakeLists.txt  README.md  placeholder.c  sz_archive.cpp  sz_compress.cpp  sz_convenience.cpp  sz_error.cpp  sz_error_internal.h  sz_version.cpp  sz_writer.cpp
src/wrapper/: CMakeLists.txt  README.md  placeholder.cpp
src/wrapper/archive/: archive_factory.cpp  archive_format.cpp  archive_format.hpp  archive_guids.cpp  archive_init.cpp  archive_init.hpp  archive_reader.cpp  archive_reader.hpp  archive_writer.cpp  archive_writer.hpp  extract_callback.cpp  extract_callback.hpp  extract_callback.hpp.backup  update_callback.cpp  update_callback.hpp
src/wrapper/common/: wrapper_common.hpp  wrapper_error.cpp  wrapper_error.hpp  wrapper_propvariant.cpp  wrapper_propvariant.hpp  wrapper_string.cpp  wrapper_string.hpp
src/wrapper/stream/: CMakeLists.txt  stream_base.hpp  stream_file.cpp  stream_file.hpp  stream_file_native.h  stream_file_win32.cpp  stream_guids.cpp  stream_memory.hpp
tests/: CMakeLists.txt  debug_compression_none.cpp  debug_password_crash.cpp  manual_test_memory.cpp  test_nonexistent.cpp  test_writer_debug.cpp
tests/ffi/: test_archive_advanced.c  test_archive_c.c  test_archive_extract.c  test_archive_writer.c  test_compress_advanced.c  test_compress_demo.c  test_error_handling.c  test_file_compress.c  test_writer_advanced.c
tests/python/: README.md  conftest.py  test_archive.py  test_convenience.py  test_writer.py
tests/unit/: CMakeLists.txt  test_archive.cpp  test_archive_reader.cpp  test_archive_reader_api.cpp  test_archive_writer.cpp  test_archive_writer_api.cpp  test_compressor.cpp  test_concurrency.cpp  test_convenience.cpp  test_edge_cases.cpp  test_error.cpp  test_error.cpp.bak  test_extraction.cpp  test_format.cpp  test_gzip_bzip2_xz.cpp  test_integration.cpp  test_password_debug.cpp  test_password_memory.cpp  test_password_minimal.cpp  test_password_minimal_debug.cpp  test_propvariant.cpp  test_stream.cpp  test_stress.cpp  test_string.cpp
